--- a/Assignment 1/app/src/main/res/values/strings.xml
+++ b/Assignment 1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HelloWorld</string>
+    <string name="erifeoluwa_jamgbadi">Erifeoluwa Jamgbadi</string>
+    <string name="my_favourite_color_is_red">My favourite color is red</string>
+    <string name="my_favourite_sport_is_basketball">My favourite sport is basketball</string>
 </resources>
